make sure that button arrows don't do the "longhorn" thing on FF when they get too small. Refs #3360
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@9074 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -149,8 +149,11 @@
 .dijitA11yRightArrow {
 	/* down arrow shown when in a11y mode */
 	font-family:Arial, sans serif;
+	/* 
 	font-size:.5em;
 	line-height:.5em;
+	*/
+	font-size: x-small;
 	padding:0em .25em;
 }
 
